# chatgpt_telegram_bot

./: .gitignore  pyproject.toml  replit.nix
bot/: config.py
