[tool.poetry]
name = "repl_nix_chatgpttelegrambot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.6"
pydub = "^0.25.1"
pymongo = "^4.3.3"
python-dotenv = "^1.0.0"
PyYAML = "^6.0"
telegram = "^0.0.1"
tiktoken = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
